# glibc_Learnging

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
Doc/: 00_准备工作.md  01_准备工作.md
Doc/02_内存管理/: 01_基础知识.md  02_Ptmalloc分析.md  02_Ptmalloc初始化分析.md  02_内存管理.md  02_内存管理基础.md  03_Ptmalloc内存管理实现.md  03_Ptmalloc分析.md  03_Tcache机制分析.md  04_Ptmalloc内存申请分析.md  04_Ptmalloc内存申请分析_上.md  05_Ptmalloc内存申请分析_下.md  06_free内存释放分析.md  ptmalloc内存管理.md
Doc/02_内存管理/uml/: BinStruct.pu  Glibc_int_malloc.drawio  ptmalloc.pu
test/: CMakeLists.txt  TestGLibcSource.cpp  ThreadPool.h  allocMacro.h  fastbin.cpp  fastbin.h  main.cpp  tcache.cpp  tcache.h
test/test/: a.out  main.cpp
